# Bullet3 lib
set (USE_DOUBLE_PRECISION OFF CACHE INTERNAL "")
set (USE_GRAPHICAL_BENCHMARK OFF CACHE INTERNAL "")
set (USE_SOFT_BODY_MULTI_BODY_DYNAMICS_WORLD ON CACHE INTERNAL "")
set (USE_OPENVR OFF CACHE INTERNAL "")
set (BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
set (ENABLE_VHACD OFF CACHE INTERNAL "")
set (BULLET2_MULTITHREADING OFF CACHE INTERNAL "")
set (BUILD_CPU_DEMOS OFF CACHE INTERNAL "")
set (USE_GLUT OFF CACHE INTERNAL "")
set (BUILD_BULLET3 ON CACHE INTERNAL "")
set (BUILD_PYBULLET OFF CACHE INTERNAL "")
set (BUILD_ENET ON CACHE INTERNAL "")
set (BUILD_CLSOCKET ON CACHE INTERNAL "")
set (BUILD_EGL OFF CACHE INTERNAL "")
set (BUILD_OPENGL3_DEMOS OFF CACHE INTERNAL "")
set (BUILD_BULLET2_DEMOS OFF CACHE INTERNAL "")
set (BUILD_EXTRAS OFF CACHE INTERNAL "")
set (INSTALL_LIBS OFF CACHE INTERNAL "")
set (INSTALL_EXTRA_LIBS OFF CACHE INTERNAL "")
set (BUILD_UNIT_TESTS OFF CACHE INTERNAL "")
set (INSTALL_CMAKE_FILES OFF CACHE INTERNAL "")

add_subdirectory (bullet3)
add_library (bullet3 STATIC "bullet3/src/btBulletCollisionAll.cpp" "bullet3/src/btBulletDynamicsAll.cpp")# "bullet3/src/btLinearMathAll.cpp")
target_link_libraries(bullet3 Bullet3Collision Bullet3Dynamics LinearMath)
target_include_directories (bullet3 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/bullet3/src)